Fix gap SideBar

--- a/src/components/SideBar/SideBar.module.css
+++ b/src/components/SideBar/SideBar.module.css
@@ -46,7 +46,7 @@
     grid-area: favopt2;
     justify-self: flex-end;
     align-items: center;
-    gap: 8px;
+    gap: 2px;
     position: sticky;
     top: 0;
 
@@ -132,11 +132,11 @@
     cursor: pointer;
 
     &:hover {
-        background-color: var(--hover-color-primary);
+        filter: drop-shadow(0px 0px 20px hsl(150deg 6.38% 44.55%));
     }
     img {
-        width: 35px;
-        height: 35px;
+        width: 50px;
+        height: 50px;
         border-radius: 50%;
         object-fit: cover;
         vertical-align: middle;
@@ -191,6 +191,9 @@
 
         &.show {
             height: fit-content;
+        }
+        li {
+            margin-bottom: 5px;
         }
 
         li a {
